# CineSRTProject

./: .gitattributes  .gitignore  Dockerfile.srt-test  README.md
BuildTools/OpenSSL/openssl_new/: configdata.pm  libcrypto-shlib-libcrypto.res  libcrypto.exp  libcrypto.rc  libcrypto_static.lib  libssl-shlib-libssl.res  libssl.exp  libssl.rc  libssl_static.lib  makefile  makefile.in
Docs/: cinesrt-check-script.txt  cinesrt-gitattributes.txt  cinesrt-gitignore.txt  cinesrt-project-structure.txt  cinesrt-readme.md  cinesrt-setup-bat.txt  cinesrtstream-cpp-fixed.txt  ffmpeg-windows-guide.md  issue2_build-cs-updated.txt  issue3_srt-wrapper-cpp-fixed-bool.txt  issue4_cinesrtstream-cpp-safe.txt  issue4_srt-c-wrapper-cpp.txt  phase2-completion-report.md  phase2-unreal-plugin-guide.md  phase3-implementation-report.md  srt-windows-detailed-plan.md  빌드_및_테스트_진행_결과_2025-07-23.md  새_환경_세팅_가이드_2025-07-23.md
Docs/Phase3/: ffmpeg-install-guide.md  phase3-plan-architecture.md  phase3-plan-implementation-details.md  phase3-plan-overview.md  phase3-plan-roadmap.md  phase3-plan-validation.md  plugin-readme-update.md
TestPrograms/receiver/: CMakeLists.txt  receiver.cpp  receiver_final.cpp  receiver_simple.cpp  receiver_test.cpp
TestPrograms/test_openssl/: CMakeLists.txt  test_openssl.cpp
TestPrograms/test_srt/: CMakeLists.txt  test_srt.cpp
TestPrograms/test_ts_receiver/: CMakeLists.txt  test_ts_receiver.cpp
UnrealProject/SRTStreamTest/: SRTStreamTest.uproject
UnrealProject/SRTStreamTest/Config/: DefaultEngine.ini  DefaultGame.ini
UnrealProject/SRTStreamTest/Content/: NewLevelSequence.uasset
UnrealProject/SRTStreamTest/Source/: SRTStreamTest.Target.cs  SRTStreamTestEditor.Target.cs
vcpkg/: CodeQL.yml
vcpkg/downloads/: 7z2409.7z
vcpkg/installed/vcpkg/: compiler-file-hash-cache.json  status
vcpkg/ports/abseil/: portfile.cmake
vcpkg/ports/ada-url/: portfile.cmake
vcpkg/ports/aklomp-base64/: portfile.cmake
vcpkg/ports/aliyun-oss-cpp-sdk/: 0001-dependency-and-targets.patch
vcpkg/ports/amd-amf/: portfile.cmake
vcpkg/ports/anari/: portfile.cmake
vcpkg/ports/antlr4/: portfile.cmake
vcpkg/ports/aom/: portfile.cmake
vcpkg/ports/apr/: unofficial-apr-config.cmake  usage-cmake
vcpkg/ports/apriltag/: portfile.cmake
vcpkg/ports/argtable3/: portfile.cmake
vcpkg/ports/arpack-ng/: portfile.cmake
vcpkg/ports/arrow/: 0005-cmake-msvcruntime.patch
vcpkg/ports/asio-grpc/: portfile.cmake
vcpkg/ports/audioengine/: portfile.cmake
vcpkg/ports/autodock-vina/: portfile.cmake
vcpkg/ports/avcpp/: portfile.cmake
vcpkg/ports/awlib/: fix-mac-build.patch
vcpkg/ports/aws-c-auth/: portfile.cmake
vcpkg/ports/aws-c-cal/: portfile.cmake
vcpkg/ports/aws-c-common/: portfile.cmake
vcpkg/ports/aws-c-compression/: portfile.cmake
vcpkg/ports/aws-c-event-stream/: portfile.cmake
vcpkg/ports/aws-c-http/: portfile.cmake
vcpkg/ports/aws-c-io/: portfile.cmake
vcpkg/ports/aws-c-mqtt/: portfile.cmake
vcpkg/ports/aws-c-s3/: portfile.cmake
vcpkg/ports/aws-c-sdkutils/: portfile.cmake
vcpkg/ports/aws-checksums/: portfile.cmake
vcpkg/ports/aws-crt-cpp/: portfile.cmake
vcpkg/ports/azure-security-attestation-cpp/: portfile.cmake
vcpkg/ports/azure-security-keyvault-certificates-cpp/: portfile.cmake
vcpkg/ports/azure-security-keyvault-keys-cpp/: portfile.cmake
vcpkg/ports/azure-security-keyvault-secrets-cpp/: portfile.cmake
vcpkg/ports/bddisasm/: portfile.cmake
vcpkg/ports/bitmagic/: portfile.cmake
vcpkg/ports/bitserializer/: portfile.cmake  usage
vcpkg/ports/blickfeld-qb2/: portfile.cmake  usage
vcpkg/ports/boringssl/: 0002-remove-WX-Werror.patch  0003-fix-shared-symbol-visibility.patch
vcpkg/ports/c4core/: portfile.cmake
vcpkg/ports/calceph/: portfile.cmake
vcpkg/ports/cargs/: portfile.cmake
vcpkg/ports/casadi/: portfile.cmake  usage
vcpkg/ports/cddlib/: 0001-disable-doc-target.patch  0002-disable-dd-log.patch
vcpkg/ports/ceres/: 0007_use_metis_config.patch
vcpkg/ports/cgns/: portfile.cmake
vcpkg/ports/cinatra/: portfile.cmake
vcpkg/ports/cjson/: portfile.cmake
vcpkg/ports/clblast/: portfile.cmake
vcpkg/ports/cmark-gfm/: portfile.cmake
vcpkg/ports/cocoyaxi/: portfile.cmake
vcpkg/ports/coin/: portfile.cmake
vcpkg/ports/comms/: portfile.cmake
vcpkg/ports/commsdsl/: portfile.cmake
vcpkg/ports/concurrencpp/: portfile.cmake
vcpkg/ports/cpp-exiftool/: CMakeLists.txt
vcpkg/ports/cpp-kana/: portfile.cmake  usage
vcpkg/ports/cpp-lazy/: portfile.cmake
vcpkg/ports/cpp-pinyin/: portfile.cmake
vcpkg/ports/cpp-timsort/: portfile.cmake
vcpkg/ports/cppgraphqlgen/: portfile.cmake
vcpkg/ports/cpprealm/: portfile.cmake
vcpkg/ports/cpputest/: portfile.cmake
vcpkg/ports/cpu-features/: portfile.cmake
vcpkg/ports/cpuid/: fix-LNK2019.patch
vcpkg/ports/crashpad/: fix-lib-name-conflict-1.patch
vcpkg/ports/crcpp/: portfile.cmake
vcpkg/ports/crossdb/: portfile.cmake
vcpkg/scripts/: update-vcpkg-tool-metadata.ps1
vcpkg/triplets/: arm64-android.cmake  x64-android.cmake
(+2350 files in other folders)
